--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
 <!-- Внешние стили -->
 
 <style>
-
-  @import url('https://fonts.googleapis.com/css2?family=Marck+Script&display=swap');
+@font-face {
+  font-family: 'Snell Roundhand';
+  src: url('font/Roundhand.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
   
 
@@ -30,11 +34,11 @@
 
   padding: 0;
 
-  font-family: 'Marck Script', cursive; /* Используем выбранный шрифт */
+  font-family: 'Snell Roundhand'; /* Используем выбранный шрифт */
 
-    background: #96bce2;
+  background: #96bce2;
 
-    color: #444444;
+   color: #444444;
 
   }
 
@@ -71,6 +75,8 @@
     padding:20px 10px;
 
     font-size:2.5em;
+
+    font-weight: normal;
 
     color:#504f4f;
 
