--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 
   font-family: 'Snell Roundhand'; /* Используем выбранный шрифт */
 
-  background: #96bce2;
+  background: #278cf1;
 
    color: #444444;
+   
 
   }
 
@@ -90,7 +91,7 @@
 
     margin: 20px auto;
 
-    background-color: rgba(133, 187, 241, 0.2);
+    background-color: rgba(133, 187, 241, 0);
 
     padding:20px;
 
@@ -224,7 +225,9 @@ h2 {
 
   color: #504f4f;
 
-  margin: 10px 0;
+  margin: 14px 0;
+  
+  font-weight: normal;
 
 }
 
