--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   background: #278cf1;
 
-   color: #444444;
+   color: #050505;
    
 
   }
@@ -79,7 +79,7 @@
 
     font-weight: normal;
 
-    color:#504f4f;
+    color:#080808;
 
   }
 
@@ -173,7 +173,7 @@
 
    font-weight:normal; 
 
-   color:#4b4a4a; 
+   color:#000000; 
 
    margin-top:20px; 
 
@@ -189,7 +189,7 @@
 
    border-radius: 10px;
 
-   border: 2px solid rgba(255,255,255,0.3);
+   border: 2px solid rgba(0, 0, 0, 0.3);
 
 }
 
@@ -223,7 +223,7 @@
 
 h2 {
 
-  color: #504f4f;
+  color: #000000;
 
   margin: 14px 0;
   
