--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Свадебное приглашение</title>
 <!-- Внешние стили -->
+ <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 <style>
 @font-face {
   font-family: 'MonAmourTwo-Medium';
@@ -20,6 +21,30 @@
    color: #050505;
   }
 
+ /* Адаптивность */
+@media(max-width: 768px){
+  h2 {
+    font-size: 1.2em;
+    padding: 10px;
+  }
+  p {
+    padding: 0 10px;
+    font-size: 1em;
+  }
+}
+/* Эффекты появления элементов (анимации) */
+.fade-in {
+    opacity:0;
+    transform: translateY(20px);
+    animation: fadeInUp ease-in-out forwards;
+    animation-duration:1s;
+}
+@keyframes fadeInUp {
+    to {
+        opacity:1;
+        transform: translateY(0);
+    }
+}
   /* Фоновое изображение без затемнения */
   body::before {
     content: "";
@@ -124,36 +149,36 @@ h2 {
 
 
 
-<h1>Приглашаем Вас</h1>
-<h1>на свадьбу</h1>
-<h1>Александра и Ольги</h1>
+<h1 class="fade-in">Приглашаем Вас</h1>
+<h1 class="fade-in">на свадьбу</h1>
+<h1 class="fade-in">Александра и Ольги</h1>
 
 <!-- Детали события -->
 <div class="section">
-<h2 style="text-align:center;">♡</h2> 
-<h2 style="text-align:center;">Мы будем счастливы разделить с Вами радость неповторимого для нас дня –</h2> 
-<h2 style="text-align:center;">дня нашей свадьбы! Приглашаем присоединиться</h2> 
-<h2 style="text-align:center;">к нашему празднику и украсить его своим присутствием!</h2> 
-<h2 style="text-align:center;">♡</h2> 
-<h2 style="text-align:center;"><strong>Место проведения (+ тайминг)</strong></h2>
-<p>Церемония регистрации состоится в </p>
-<h2 style="text-align:center;"><strong>11:00</strong></h2>
-<p>во Дворце Бракосочетания по адресу: </p> 
-<h2 style="text-align:center;"><strong>ул. Софии Слуцкой 1, Слуцк.</strong></h2>
-<p>Свадебное торжество будет проходить в ресторане </p>
-<h2 style="text-align:center;"><strong>"Voyage Hall"</strong></h2>   
-<p>по адресу: </p>  
-<h2 style="text-align:center;"><strong>улица Парижской Коммуны, 27</strong></h2>
+<h2 style="text-align:center;" class="fade-in">♡</h2> 
+<h2 style="text-align:center;" class="fade-in">Мы будем счастливы разделить с Вами радость неповторимого для нас дня –</h2> 
+<h2 style="text-align:center;" class="fade-in">дня нашей свадьбы! Приглашаем присоединиться</h2> 
+<h2 style="text-align:center;" class="fade-in">к нашему празднику и украсить его своим присутствием!</h2> 
+<h2 style="text-align:center;" class="fade-in">♡</h2> 
+<h2 style="text-align:center;" class="fade-in"><strong>Место проведения (+ тайминг)</strong></h2>
+<p class="fade-in">Церемония регистрации состоится в </p>
+<h2 style="text-align:center;" class="fade-in"><strong>11:00</strong></h2>
+<p class="fade-in">во Дворце Бракосочетания по адресу: </p> 
+<h2 style="text-align:center;" class="fade-in"><strong>ул. Софии Слуцкой 1, Слуцк.</strong></h2>
+<p class="fade-in">Свадебное торжество будет проходить в ресторане </p>
+<h2 style="text-align:center;" class="fade-in"><strong>"Voyage Hall"</strong></h2>   
+<p class="fade-in">по адресу: </p>  
+<h2 style="text-align:center;" class="fade-in"><strong>улица Парижской Коммуны, 27</strong></h2>
 <p>Дата и время:</p>  
-<h2 style="text-align:center;"><span id="eventDate"><strong>15 августа 2025 года, в 17:00</strong></span></h2>
-<h2 style="text-align:center;">♡</h2> 
-<h2 style="text-align:center;">В знак вашего теплого пожелания и приятного сюрприза для нас,</h2> 
-<h2 style="text-align:center;">мы будем очень благодарны, если вместо традиционных цветов</h2> 
-<h2 style="text-align:center;">вы решите подарить нам комнатное или садовое растение,</h2> 
-<h2 style="text-align:center;">сладости или изысканную бутылочку вина.</h2>
-<h2 style="text-align:center;">♡</h2> 
-<p><strong>Стиль:</strong> Классическая романтическая свадьба</p>
-<p><strong>Контактный телефон жениха:</strong> +375292566518</p>
+<h2 style="text-align:center;" class="fade-in"><span id="eventDate"><strong>15 августа 2025 года, в 17:00</strong></span></h2>
+<h2 style="text-align:center;" class="fade-in">♡</h2> 
+<h2 style="text-align:center;" class="fade-in">В знак вашего теплого пожелания и приятного сюрприза для нас,</h2> 
+<h2 style="text-align:center;" class="fade-in">мы будем очень благодарны, если вместо традиционных цветов</h2> 
+<h2 style="text-align:center;" class="fade-in">вы решите подарить нам комнатное или садовое растение,</h2> 
+<h2 style="text-align:center;" class="fade-in">сладости или изысканную бутылочку вина.</h2>
+<h2 style="text-align:center;" class="fade-in">♡</h2> 
+<p class="fade-in"><strong>Стиль:</strong> Классическая романтическая свадьба</p>
+<p class="fade-in"><strong>Контактный телефон жениха:</strong> +375292566518</p>
 </div>
 
 <!-- Отсчет времени -->
