--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@ window.onload = function() {
   initMap();
 }; 
 </script>
-<h2 style="text-align:center;">Пожалуйста, сообщите о вашем присутствием не позднее чем за </h2> 
- <h2 style="text-align:center;"> две недели до предстоящего мероприятия.</h2> 
+<h2 style="text-align:center;">Пожалуйста, сообщите о вашем присутствием и состве не позднее чем за </h2> 
+ <h2 style="text-align:center;"> три недели до предстоящего мероприятия.</h2> 
 <h2 style="text-align:center;">♡</h2> 
 <h2 style="text-align:center;">All we need is love</h2> 
 <h1 style="text-align:center;">∞</h1> 
