--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ window.onload = function() {
   initMap();
 }; 
 </script>
-<h2 style="text-align:center;">Пожалуйста, сообщите о вашем присутствием и состве не позднее чем за </h2> 
+<h2 style="text-align:center;">Пожалуйста, сообщите о вашем присутствием и составе не позднее чем за </h2> 
  <h2 style="text-align:center;"> три недели до предстоящего мероприятия.</h2> 
 <h2 style="text-align:center;">♡</h2> 
 <h2 style="text-align:center;">All we need is love</h2> 
