--- a/index.html
+++ b/index.html
@@ -536,19 +536,19 @@ window.onload = function() {
 <h2 style="text-align:center;">♡</h2> 
 <h2 style="text-align:center;">All we need is love</h2> 
 <!-- QR-код секция -->
-<div class="qr-wrapper fade-in">
+<!-- <div class="qr-wrapper fade-in">
   <div class="qr-description">
-    Нажмите на QR-код для перехода в наш телеграм-канал
+    Пожалуйста, нажмите на QR-код, чтобы перейти в наш телеграм-канал и поделиться фотографиями с нашей свадьбы.
   </div>
 
-  <div id="qrContainer" class="qr-container">
+ <div id="qrContainer" class="qr-container">
     <img id="qrCodeImage" 
          class="qr-code-image" 
          src="qr-code.png" 
          alt="QR-код для телеграм-канала"
          onclick="openTelegramChannel()" />
-  </div>
-</div>
+  </div> 
+</div> -->
 
 <script>
 function openTelegramChannel() {
